more Result fixes